--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
         {
             "src": "./main.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "excludeFiles": "**/*.html"
         }
     ],
     "routes": [
@@ -11,10 +12,5 @@
             "src": "/(.*)",
             "dest": "/"
         }
-    ],
-  "functions": {
-    "api/**/*.py": {
-      "excludeFiles": "**/*.html"
-  }
-}
+    ]
 }
